--- a/tox.ini
+++ b/tox.ini
@@ -3,14 +3,14 @@ envlist = flake8,pycodestyle
 skipsdist = True
 
 [testenv]
-basepython = python3.6
+basepython = python3.7
 usedevelop = False
 install_command = pip install {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
 
 
 [testenv:flake8]
-deps = hacking
+deps = flake8==3.6.0
 commands = flake8 {posargs}
 
 [flake8]
@@ -20,5 +20,5 @@ max-line-length = 100
 exclude = .venv,.tox,doc,*egg,.git
 
 [testenv:pycodestyle]
-deps = hacking
+deps = pycodestyle==2.4.0
 commands = pycodestyle
